<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Trivia App</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to Trivia App</string>
    <string name="startTrivia">Start Trivia</string>
    <string name="create">Create Quiz Question</string>
    <string name="delete">Delete All My Questions</string>
    <string name="exit">Exit</string>
    <string name="title_activity_trivia">TriviaActivity</string>
    <string name="quit_button">Quit</string>
    <string name="next_button">Next</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="correctAnswer">Correct Answer</string>
    <string name="triviaResult">Trivia Result</string>
    <string name="quit">Quit</string>
    <string name="tryAgain">Try Again</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="typeQuestion">Type question here</string>
    <string name="typeOption">Type options here</string>
    <string name="addQuestion">+</string>
    <string name="submitButton1">Submit</string>
    <string name="resultmessage1">Try again and see if you can get all the correct answers!</string>
    <string name="resultmessage2">You got all the answers correct!!!!</string> 
    <string name="submitButton">Submit</string>
    <string name="image_url_hint">Paste image URL here (optional)</string>
    <string name="question_hint">Type question here</string>
    <string name="option_hint">Type option here</string>
    <string name="create_question">Create a New Question</string>
    
</resources>
