<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/createButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/create" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/createButton"
        android:layout_below="@+id/createButton"
        android:layout_marginTop="49dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/deleteButton"
        android:layout_below="@+id/deleteButton"
        android:layout_marginTop="50dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/welcomeTextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:text="@string/startTrivia" />

    <TextView
        android:id="@+id/welcomeTextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
