<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/createTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/create_question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/questionEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/createTextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/question_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/optionEdittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/createTextview"
        android:layout_below="@+id/questionEdittext"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/option_hint" />

    <EditText
        android:id="@+id/imageEdittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:ems="10"
        android:hint="@string/image_url_hint" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/addButton"
        android:text="@string/submitButton1" />

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addButton" >
    </RadioGroup>

    <Button
        android:id="@+id/addButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/optionEdittext"
        android:layout_toRightOf="@+id/createTextview"
        android:text="@string/addQuestion" />

</RelativeLayout>